fix: about-section gap on mobile

--- a/style.css
+++ b/style.css
@@ -424,6 +424,9 @@ h2 {
 	.projects {
 		margin-top: 2rem;
 	}
+	.about-section__wrapper {
+		margin-top: 2rem;
+	}
 }
 
 @media (max-width: 480px) {
